# Oreo-linux

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
arch/powerpc/mm/book3s64/: pkeys.c
arch/x86/: Kconfig  Makefile
arch/x86/boot/compressed/: kaslr.c  misc.c  misc.h
arch/x86/crypto/: aria-aesni-avx-asm_64.S
arch/x86/entry/: entry_64.S
arch/x86/include/asm/: alternative.h  kaslr.h  nospec-branch.h  page_types.h  paravirt.h  paravirt_types.h  percpu.h  pgtable_64_types.h  processor.h  sections.h  sync_core.h
arch/x86/kernel/: callthunks.c  ftrace_64.S  head64.c  head_64.S  kvm.c  module.c  setup.c  vmlinux.lds.S
arch/x86/kernel/cpu/: common.c
arch/x86/lib/: cmpxchg16b_emu.S
arch/x86/mm/: mmap.c  pgprot.c  pgtable.c  pkeys.c  pti.c
arch/x86/net/: bpf_jit_comp.c
arch/x86/xen/: mmu_pv.c  xen-head.S
compile_scripts/: compile.py  gem5.config  gem5_protect.config  gem5_protect_module.config  gem5_template.config  gen_ftrace.py  linux_config.toml  read_relocs.py  test.config
fs/: binfmt_elf.c  binfmt_elf_fdpic.c
include/asm-generic/: vmlinux.lds.h
include/linux/: mm.h  pgtable.h
init/: main.c
kernel/entry/: syscall_user_dispatch.c
kernel/module/: main.c  tree_lookup.c
lib/: strncpy_from_user.c  strnlen_user.c
mm/: memory.c  mempolicy.c  mincore.c  mlock.c  mmap.c  mprotect.c  mremap.c  msync.c  util.c  vmalloc.c
scripts/: Makefile.lib
tools/objtool/: check.c
tools/objtool/arch/x86/: decode.c
