[tool.poetry]
name = "protect-kaslr"
version = "0.1.0"
description = ""
authors = ["zhizhuoxin <shixins@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scons = "^4.5.2"
click = "^8.1.4"
tomli = "^2.0.1"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
