[tool.poetry]
name = "protect-kaslr"
version = "0.1.0"
description = ""
authors = ["oreo <oreo.anonymous.artifact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scons = "^4.5.2"
click = "^8.1.4"
tomli = "^2.0.1"
arrow = "^1.3.0"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
